chart/templates/kong.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong
spec:
  selector:
    app: kong
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
