chart/templates/nginx.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
